nivasa-macros/tests/trybuild/controller_set_metadata_empty_value.rs
use nivasa_macros::{controller, set_metadata};

#[set_metadata(key = "scope", value = "   ")]
#[controller("/users")]
struct UsersController;

fn main() {}
